# happy_protein

./: .gitignore  manage.py  pyproject.toml  render.yaml  requirements.txt  sample.env
happy_protein/: asgi.py  settings.py  urls.py  wsgi.py
home/: urls.py  views.py
home/static/home/css/: responsive.css  style.css
home/templates/home/: home.html  home_layout.html
staticfiles/: staticfiles.json
staticfiles/home/css/: style.87b86680bc25.css
