[tool.poetry]
name = "happy_protein"
version = "0.1.0"
description = "Happy Protein"
authors = ["Rangarajan"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.7.2"
Django = "4.0"
gunicorn = "21.2.0"
packaging = "23.2"
python-dotenv = "1.0.0"
sqlparse = "0.4.4"
tzdata = "2023.3"
whitenoise = "6.6.0"
